# handtyped

./: .TODO.md.swp  .build-release-app.sh.swp  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Info.plist  Package.swift  README.md  TODO.md  build-release-app.sh  dev.sh  index.html  native-dev.sh  package-lock.json  package.json  setup.sh  setup.sh~  tauri-dev.sh  tauri.conf.json  test.sh  type_a.py  ui-logic.test.js  vite.config.js
.build/: build.db  plugin-tools.yaml
Sources/HumanProof/: AppMenu.swift  BridgeHandler.swift  BundleExport.swift  HIDCapture.swift  Session.swift  Signing.swift  WindowController.swift
Sources/Typewriter/: AppDelegate.swift  AppMenu.swift  BundleExport.swift  Session.swift  Signing.swift  WindowController.swift
assets/icon-explorations/: index.html
capabilities/: default.json
client/: index.html  package-lock.json  package.json
client/src/: App.jsx
docs/: claude-codex-compat.md
proof-server/: package-lock.json  package.json  server.js
proof-server/public/: replay.html
proof-server/sessions/: 0ecc756c-52ee-41c5-9878-4bdb2b244cc5.json
replay-server/: CLOUDFLARE.md  edu-auth.js  edu-google-auth.js  edu-password.js  edu-schema.js  edu-store.js  edu-store.test.js  guardrails.js  landing-page.test.js  package-lock.json  package.json  replay-page.test.js  replay-view.test.js  replay-workflow.test.js  server-lib.js  server.js  server.test.js  session-store.js  trusted-signers.js  worker.js  worker.test.js  wrangler.toml
replay-server/edu-store/: assignment_audits.json  assignments.json  (+5 more)
server/: db.js  humanproof.db-shm  humanproof.db-wal  index.js  llm.js  package-lock.json  package.json  signing.js
src/: bridge.js  bundle.rs  commands.rs  document.rs  editor.js  editor.rs  find.js  hid.rs  integrity.rs  lib.rs  lockdown.rs  main.rs  markdown.js  markdown.test.js  observability.rs  preview.rs  readability.js  readability.test.js  schema.js  schema.test.js  screencapture.rs  session.rs  signing.rs  storage.js  storage.test.js  typography.js  typography.test.js  ui.js  ui.test.js  upload.rs  vim.rs  wysiwyg.rs
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bundle.rs  commands.rs  editor.rs  hid.rs  integrity.rs  lib.rs  main.rs  session.rs  signing.rs  upload.rs  wysiwyg.rs
tests/: build_release_app_script.rs  document_workflow.rs  editor_workflow_e2e.rs
(+355 files in other folders)
