[package]
name = "humanproof"
version = "0.1.0"
edition = "2021"

[lib]
name = "humanproof_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
zip = "=2.1.6"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
dirs-next = "2"
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }
egui = "0.31"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-foundation-sys = "0.8"
security-framework = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
